--- a/La Distrib'/Storyboards/Base.lproj/Main.storyboard
+++ b/La Distrib'/Storyboards/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                                         </constraints>
                                         <state key="normal" backgroundImage="ButtonConnect"/>
                                         <connections>
-                                            <segue destination="Vbj-6p-Qkc" kind="presentation" identifier="ConnectToHomeSegue" modalTransitionStyle="coverVertical" id="LLg-ex-iOF"/>
+                                            <action selector="connection" destination="n6J-Qx-P04" eventType="touchUpInside" id="woE-nC-lKA"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -98,7 +98,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTU-lb-Zt5">
-                                <rect key="frame" x="221" y="518" width="76" height="30"/>
+                                <rect key="frame" x="211" y="518" width="86" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="syS-Gn-s8b"/>
                                 </constraints>
@@ -128,6 +128,7 @@
                         <outlet property="connectButton" destination="5cW-w6-mkf" id="Y5L-Th-pYL"/>
                         <outlet property="loginTextField" destination="j04-V3-u8O" id="CWw-fv-TLV"/>
                         <outlet property="passwordTextField" destination="Dsc-fi-Fwj" id="4Mc-tp-cD6"/>
+                        <segue destination="Vbj-6p-Qkc" kind="presentation" identifier="segueToHome" id="WWn-6I-pS4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1LK-1j-ZSO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -322,7 +323,7 @@
                         <outlet property="passwordTextField" destination="V5m-HH-bHm" id="INC-kN-a6h"/>
                         <outlet property="registrateButton" destination="IkD-7L-XWM" id="19h-bo-R5d"/>
                         <outlet property="usernameTextField" destination="q9F-6l-Bbu" id="WRz-Zn-Hsm"/>
-                        <segue destination="n6J-Qx-P04" kind="presentation" identifier="RegistrationToConnecSegue" modalTransitionStyle="flipHorizontal" id="rE7-Dc-9vH"/>
+                        <segue destination="n6J-Qx-P04" kind="presentation" identifier="segueToConnect" modalTransitionStyle="flipHorizontal" id="rE7-Dc-9vH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P4a-rC-8RB" userLabel="First Responder" sceneMemberID="firstResponder"/>
