--- a/La Distrib'/Storyboards/Base.lproj/Main.storyboard
+++ b/La Distrib'/Storyboards/Base.lproj/Main.storyboard
@@ -11,6 +11,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Roboto-Bold.ttf">
+            <string>Roboto-Bold</string>
+        </array>
+        <array key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+        </array>
         <array key="RobotoCondensed-Light.ttf">
             <string>RobotoCondensed-Light</string>
         </array>
@@ -98,7 +104,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTU-lb-Zt5">
-                                <rect key="frame" x="211" y="518" width="86" height="30"/>
+                                <rect key="frame" x="221" y="518" width="76" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="syS-Gn-s8b"/>
                                 </constraints>
@@ -337,9 +343,41 @@
                     <view key="view" contentMode="scaleToFill" id="m5w-UA-qY6">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bonjour" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ax2-g1-JSR">
+                                <rect key="frame" x="63" y="67" width="194" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Ax2-g1-JSR" secondAttribute="height" multiplier="194:35" id="Vmb-hY-pvx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="30"/>
+                                <color key="textColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crédit : " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IuB-gq-tKi">
+                                <rect key="frame" x="63" y="132" width="194" height="23.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23.5" id="rro-yL-Z6u"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="194" id="w8f-RM-P3c"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="20"/>
+                                <color key="textColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="0.153734237" green="0.46812063459999997" blue="0.55368381739999994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Ax2-g1-JSR" firstAttribute="leading" secondItem="SPD-Xb-yb9" secondAttribute="leading" constant="63" id="2lu-By-1I6"/>
+                            <constraint firstItem="IuB-gq-tKi" firstAttribute="centerX" secondItem="m5w-UA-qY6" secondAttribute="centerX" id="Sj4-2X-uiS"/>
+                            <constraint firstItem="Ax2-g1-JSR" firstAttribute="top" secondItem="SPD-Xb-yb9" secondAttribute="top" constant="47" id="YMw-eO-hTu"/>
+                            <constraint firstItem="Ax2-g1-JSR" firstAttribute="centerX" secondItem="m5w-UA-qY6" secondAttribute="centerX" id="b0E-7S-U0D"/>
+                            <constraint firstItem="IuB-gq-tKi" firstAttribute="top" secondItem="Ax2-g1-JSR" secondAttribute="bottom" constant="30" id="r7i-7c-7rq"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="SPD-Xb-yb9"/>
                     </view>
+                    <connections>
+                        <outlet property="BalanceLabel" destination="IuB-gq-tKi" id="lm8-KB-2nL"/>
+                        <outlet property="WelcomeLabel" destination="Ax2-g1-JSR" id="aMH-oB-dkK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T9z-Z5-89u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
