--- a/La Distrib'/Storyboards/Base.lproj/Main.storyboard
+++ b/La Distrib'/Storyboards/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n6J-Qx-P04">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -11,8 +11,8 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Roboto-Bold.ttf">
-            <string>Roboto-Bold</string>
+        <array key="Roboto-Medium.ttf">
+            <string>Roboto-Medium</string>
         </array>
         <array key="Roboto-Regular.ttf">
             <string>Roboto-Regular</string>
@@ -33,11 +33,11 @@
             <objects>
                 <viewController id="n6J-Qx-P04" customClass="ConnectViewController" customModule="La_Distrib_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BJy-h9-i1D">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gA0-UN-1Wj" userLabel="BoxView">
-                                <rect key="frame" x="23" y="142" width="274" height="284"/>
+                                <rect key="frame" x="23" y="98" width="274" height="284"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BoxConnection" translatesAutoresizingMaskIntoConstraints="NO" id="KlZ-x0-tAU">
                                         <rect key="frame" x="0.0" y="0.0" width="274" height="284"/>
@@ -104,7 +104,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTU-lb-Zt5">
-                                <rect key="frame" x="221" y="518" width="76" height="30"/>
+                                <rect key="frame" x="221" y="430" width="76" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="syS-Gn-s8b"/>
                                 </constraints>
@@ -146,11 +146,22 @@
             <objects>
                 <viewController id="8J9-8O-h7p" customClass="RegistrationViewController" customModule="La_Distrib_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eCF-7M-FBr">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fPn-E8-NQ2">
+                                <rect key="frame" x="20" y="35" width="80" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="IN4-Pn-893"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="mmg-ty-gtr"/>
+                                </constraints>
+                                <state key="normal" title="  Return" image="Disclosure Indicator"/>
+                                <connections>
+                                    <action selector="returnToConnectView" destination="8J9-8O-h7p" eventType="touchUpInside" id="enb-pv-ldb"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XOM-Pi-e9v">
-                                <rect key="frame" x="20" y="114" width="280" height="300"/>
+                                <rect key="frame" x="20" y="70" width="280" height="300"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cDZ-kf-KEF" userLabel="allFeatures">
                                         <rect key="frame" x="0.0" y="20.5" width="280" height="258"/>
@@ -301,7 +312,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IkD-7L-XWM">
-                                <rect key="frame" x="65" y="488" width="190" height="35"/>
+                                <rect key="frame" x="65" y="400" width="190" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="IkD-7L-XWM" secondAttribute="height" multiplier="38:7" id="Cq3-yR-DWz"/>
                                 </constraints>
@@ -313,10 +324,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.153734237" green="0.46812063459999997" blue="0.55368381739999994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="XOM-Pi-e9v" firstAttribute="leading" secondItem="fPn-E8-NQ2" secondAttribute="leading" id="4b9-XX-Zkc"/>
                             <constraint firstItem="XOM-Pi-e9v" firstAttribute="centerY" secondItem="eCF-7M-FBr" secondAttribute="centerY" constant="-20" id="CO6-W9-o2S"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fPn-E8-NQ2" secondAttribute="trailing" constant="20" symbolic="YES" id="ED3-oA-RYP"/>
                             <constraint firstItem="IkD-7L-XWM" firstAttribute="centerX" secondItem="eCF-7M-FBr" secondAttribute="centerX" id="Jou-Fe-Y8u"/>
                             <constraint firstItem="XOM-Pi-e9v" firstAttribute="leading" secondItem="JII-Zg-p7Y" secondAttribute="leading" constant="20" id="O0G-cd-xBx"/>
                             <constraint firstItem="IkD-7L-XWM" firstAttribute="leading" secondItem="JII-Zg-p7Y" secondAttribute="leading" constant="65" id="S5a-y8-E3q"/>
+                            <constraint firstItem="fPn-E8-NQ2" firstAttribute="top" secondItem="JII-Zg-p7Y" secondAttribute="top" constant="15" id="dFq-NE-4BE"/>
                             <constraint firstItem="XOM-Pi-e9v" firstAttribute="centerX" secondItem="eCF-7M-FBr" secondAttribute="centerX" id="gRV-Qf-o5J"/>
                             <constraint firstItem="JII-Zg-p7Y" firstAttribute="bottom" secondItem="IkD-7L-XWM" secondAttribute="bottom" constant="45" id="kmI-Qi-YGG"/>
                         </constraints>
@@ -328,6 +342,7 @@
                         <outlet property="emailTextField" destination="RGy-Tc-jB0" id="Uvd-Fe-YsB"/>
                         <outlet property="passwordTextField" destination="V5m-HH-bHm" id="INC-kN-a6h"/>
                         <outlet property="registrateButton" destination="IkD-7L-XWM" id="19h-bo-R5d"/>
+                        <outlet property="returnButton" destination="fPn-E8-NQ2" id="dLJ-Dh-Rky"/>
                         <outlet property="usernameTextField" destination="q9F-6l-Bbu" id="WRz-Zn-Hsm"/>
                         <segue destination="n6J-Qx-P04" kind="presentation" identifier="segueToConnect" modalTransitionStyle="flipHorizontal" id="rE7-Dc-9vH"/>
                     </connections>
@@ -341,20 +356,21 @@
             <objects>
                 <viewController id="Vbj-6p-Qkc" customClass="HomeViewController" customModule="La_Distrib_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="m5w-UA-qY6">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bonjour" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ax2-g1-JSR">
-                                <rect key="frame" x="63" y="67" width="194" height="35"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ax2-g1-JSR" userLabel="WelcomeLabel">
+                                <rect key="frame" x="45" y="75" width="230" height="33"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="Ax2-g1-JSR" secondAttribute="height" multiplier="194:35" id="Vmb-hY-pvx"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="230" id="Vkz-uK-IFF"/>
+                                    <constraint firstAttribute="width" secondItem="Ax2-g1-JSR" secondAttribute="height" multiplier="230:33" id="i67-iY-SU4"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="30"/>
+                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="28"/>
                                 <color key="textColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crédit : " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IuB-gq-tKi">
-                                <rect key="frame" x="63" y="132" width="194" height="23.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance : " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IuB-gq-tKi" userLabel="BalanceLabel">
+                                <rect key="frame" x="63" y="138" width="194" height="23.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="23.5" id="rro-yL-Z6u"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="194" id="w8f-RM-P3c"/>
@@ -363,13 +379,28 @@
                                 <color key="textColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vp6-tk-TwV">
+                                <rect key="frame" x="275" y="30" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="vp6-tk-TwV" secondAttribute="height" multiplier="1:1" id="gDt-z3-yqt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="15"/>
+                                <state key="normal" backgroundImage="powerButton">
+                                    <color key="titleColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="diconnect" destination="Vbj-6p-Qkc" eventType="touchUpInside" id="PZt-Jx-8Lw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.153734237" green="0.46812063459999997" blue="0.55368381739999994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Ax2-g1-JSR" firstAttribute="leading" secondItem="SPD-Xb-yb9" secondAttribute="leading" constant="63" id="2lu-By-1I6"/>
+                            <constraint firstItem="Ax2-g1-JSR" firstAttribute="leading" secondItem="SPD-Xb-yb9" secondAttribute="leading" constant="45" id="5he-gi-cDB"/>
+                            <constraint firstItem="vp6-tk-TwV" firstAttribute="top" secondItem="SPD-Xb-yb9" secondAttribute="top" constant="10" id="Qch-UV-21B"/>
+                            <constraint firstItem="Ax2-g1-JSR" firstAttribute="centerX" secondItem="m5w-UA-qY6" secondAttribute="centerX" id="R3Z-a5-IGx"/>
                             <constraint firstItem="IuB-gq-tKi" firstAttribute="centerX" secondItem="m5w-UA-qY6" secondAttribute="centerX" id="Sj4-2X-uiS"/>
-                            <constraint firstItem="Ax2-g1-JSR" firstAttribute="top" secondItem="SPD-Xb-yb9" secondAttribute="top" constant="47" id="YMw-eO-hTu"/>
-                            <constraint firstItem="Ax2-g1-JSR" firstAttribute="centerX" secondItem="m5w-UA-qY6" secondAttribute="centerX" id="b0E-7S-U0D"/>
+                            <constraint firstItem="SPD-Xb-yb9" firstAttribute="trailing" secondItem="vp6-tk-TwV" secondAttribute="trailing" constant="15" id="TTi-L6-xhF"/>
+                            <constraint firstItem="Ax2-g1-JSR" firstAttribute="top" secondItem="SPD-Xb-yb9" secondAttribute="top" constant="55" id="YMw-eO-hTu"/>
                             <constraint firstItem="IuB-gq-tKi" firstAttribute="top" secondItem="Ax2-g1-JSR" secondAttribute="bottom" constant="30" id="r7i-7c-7rq"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SPD-Xb-yb9"/>
@@ -377,6 +408,7 @@
                     <connections>
                         <outlet property="BalanceLabel" destination="IuB-gq-tKi" id="lm8-KB-2nL"/>
                         <outlet property="WelcomeLabel" destination="Ax2-g1-JSR" id="aMH-oB-dkK"/>
+                        <segue destination="n6J-Qx-P04" kind="presentation" identifier="segueToConnectFromHome" id="eQp-dC-A6C"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T9z-Z5-89u" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -388,5 +420,10 @@
         <image name="BoxConnection" width="277" height="288"/>
         <image name="ButtonConnect" width="190" height="35"/>
         <image name="ButtonRegistrate" width="191" height="35"/>
+        <image name="Disclosure Indicator" width="15" height="24"/>
+        <image name="powerButton" width="30" height="30"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="rE7-Dc-9vH"/>
+    </inferredMetricsTieBreakers>
 </document>
