--- a/La Distrib'/Storyboards/Base.lproj/Main.storyboard
+++ b/La Distrib'/Storyboards/Base.lproj/Main.storyboard
@@ -370,7 +370,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vp6-tk-TwV">
-                                <rect key="frame" x="260" y="30" width="30" height="30"/>
+                                <rect key="frame" x="260" y="35" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="vp6-tk-TwV" secondAttribute="height" multiplier="1:1" id="gDt-z3-yqt"/>
                                 </constraints>
@@ -383,14 +383,28 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XUI-Fx-BHA" userLabel="Title Stack View">
-                                <rect key="frame" x="25" y="75" width="270" height="64.5"/>
+                                <rect key="frame" x="25" y="80" width="270" height="64.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ax2-g1-JSR" userLabel="WelcomeLabel">
-                                        <rect key="frame" x="5" y="0.0" width="260" height="33"/>
-                                        <fontDescription key="fontDescription" name="Roboto-MediumItalic" family="Roboto" pointSize="28"/>
-                                        <color key="textColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zrU-Rd-L3J" userLabel="Welcome">
+                                        <rect key="frame" x="34" y="0.0" width="202" height="33"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ax2-g1-JSR" userLabel="WelcomeLabel">
+                                                <rect key="frame" x="0.0" y="0.0" width="114" height="33"/>
+                                                <fontDescription key="fontDescription" name="Roboto-MediumItalic" family="Roboto" pointSize="28"/>
+                                                <color key="textColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5R9-dr-Pld" userLabel="UsernameLabel">
+                                                <rect key="frame" x="122" y="0.0" width="80" height="33"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="2iJ-ZL-7rl"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="28"/>
+                                                <color key="textColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="PAS-hG-4Qc" userLabel="Balance">
                                         <rect key="frame" x="74" y="41" width="122.5" height="23.5"/>
                                         <subviews>
@@ -410,13 +424,11 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Ax2-g1-JSR" firstAttribute="leading" secondItem="XUI-Fx-BHA" secondAttribute="leading" constant="5" id="4d3-DD-STE"/>
-                                    <constraint firstAttribute="trailing" secondItem="Ax2-g1-JSR" secondAttribute="trailing" constant="5" id="O2N-4s-ORF"/>
                                     <constraint firstAttribute="height" constant="65" id="QiH-mU-RmG"/>
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="yN3-bv-2sX" userLabel="History Stack View">
-                                <rect key="frame" x="25" y="169.5" width="270" height="368.5"/>
+                                <rect key="frame" x="25" y="174.5" width="270" height="363.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="History" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na5-2j-Oyv" userLabel="History">
                                         <rect key="frame" x="5" y="0.0" width="260" height="20"/>
@@ -428,7 +440,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TOY-gP-nvl" userLabel="History List">
-                                        <rect key="frame" x="5" y="25" width="260" height="343.5"/>
+                                        <rect key="frame" x="5" y="25" width="260" height="338.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomHomeCell" rowHeight="75" id="pav-mX-ocl" customClass="CustomTableViewCell" customModule="La_Distrib_" customModuleProvider="target">
@@ -438,7 +450,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="260" height="74.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="penIcon" translatesAutoresizingMaskIntoConstraints="NO" id="0NT-nd-YUl">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencilIcon" translatesAutoresizingMaskIntoConstraints="NO" id="0NT-nd-YUl">
                                                             <rect key="frame" x="10" y="12" width="50" height="50"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="50" id="3um-zk-t8q"/>
@@ -519,7 +531,7 @@
                             <constraint firstItem="yN3-bv-2sX" firstAttribute="leading" secondItem="XUI-Fx-BHA" secondAttribute="leading" id="5ue-wI-ceA"/>
                             <constraint firstItem="XUI-Fx-BHA" firstAttribute="top" secondItem="vp6-tk-TwV" secondAttribute="bottom" constant="15" id="Gvr-wN-pOu"/>
                             <constraint firstItem="yN3-bv-2sX" firstAttribute="top" secondItem="XUI-Fx-BHA" secondAttribute="bottom" constant="30" id="KWN-oB-gvJ"/>
-                            <constraint firstItem="vp6-tk-TwV" firstAttribute="top" secondItem="SPD-Xb-yb9" secondAttribute="top" constant="10" id="Qch-UV-21B"/>
+                            <constraint firstItem="vp6-tk-TwV" firstAttribute="top" secondItem="SPD-Xb-yb9" secondAttribute="top" constant="15" id="Qch-UV-21B"/>
                             <constraint firstItem="SPD-Xb-yb9" firstAttribute="trailing" secondItem="vp6-tk-TwV" secondAttribute="trailing" constant="30" id="TTi-L6-xhF"/>
                             <constraint firstItem="SPD-Xb-yb9" firstAttribute="bottom" secondItem="yN3-bv-2sX" secondAttribute="bottom" constant="30" id="Vpf-5S-XQ9"/>
                             <constraint firstItem="XUI-Fx-BHA" firstAttribute="leading" secondItem="SPD-Xb-yb9" secondAttribute="leading" constant="25" id="etw-Ph-uTZ"/>
@@ -531,7 +543,7 @@
                     <connections>
                         <outlet property="balanceLabel" destination="rVh-js-XTF" id="XiF-KS-omP"/>
                         <outlet property="historyList" destination="TOY-gP-nvl" id="5dt-cq-nnh"/>
-                        <outlet property="welcomeLabel" destination="Ax2-g1-JSR" id="muj-bJ-42L"/>
+                        <outlet property="welcomeLabel" destination="5R9-dr-Pld" id="Mjd-W7-DAT"/>
                         <segue destination="n6J-Qx-P04" kind="presentation" identifier="segueToConnectFromHome" id="eQp-dC-A6C"/>
                     </connections>
                 </viewController>
@@ -546,7 +558,7 @@
         <image name="ButtonRegistrate" width="191" height="35"/>
         <image name="Disclosure Indicator" width="15" height="24"/>
         <image name="Registrate" width="34" height="32"/>
-        <image name="penIcon" width="52" height="52"/>
+        <image name="pencilIcon" width="52" height="52"/>
         <image name="powerButton" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
